--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,10 +13,11 @@ source:
 build:
   noarch: python
   number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   build:
+    - pip
     - python
     - setuptools
 
